lang.java.statics.test/tests/positive/names/pkg-qual-import-inner-class.yes.javtest
STATIX ok
JAVAC  ok

[C]
import p.A.B;
public class C {
    public B f;
}

[p] {
  [A]
  package p;
  public class A {
      public class B {}
  }
}
