lang.java.statics.test/tests/negative/packages/single-type-import-with-same-name-as-class-in-compilation-unit-not-allowed.no.javtest
STATIX fail java\.duplicates\.no-duplicate-type.*\"A\"
JAVAC  fail A is already defined in this compilation unit

[p] {

    [A]
    package p;
    import q.A;
    public class A {
    }

}

[q] {

    [A]
    package q;
    public class A {
    }

}
